--- a/style.css
+++ b/style.css
@@ -43,15 +43,15 @@ html {
 
 body {
   font-family: 'Playfair Display', serif;
-  font-size: 1.8rem; /* 18px */
+  font-size: 18px; 
   font-weight: 400;
   line-height: 1.4;
-  color: #f0f0f0;
+  color: #FEF6EB;
 }
 
 h1,
 h2 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Playfair Display', sans-serif;
   font-weight: 700;
   text-align: center;
 }
@@ -70,7 +70,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: #f0f0f0;
+  color: #FEF6EB;
 }
 
 img {
@@ -87,7 +87,7 @@ img {
   top: 0;
   left: 0;
   width: 100%;
-  background: #be3144;
+  background: #C25B56;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
   z-index: 10;
 }
@@ -114,7 +114,7 @@ img {
 }
 
 .nav-list a:hover {
-  background: #45567d;
+  background: #74828F;
 }
 
 /* Welcome section */
@@ -126,7 +126,7 @@ img {
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-color: #000;
+  background-color: #525564;
   background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
 }
 
@@ -134,7 +134,7 @@ img {
   font-size: 3rem;
   font-weight: 200;
   font-style: italic;
-  color: #be3144;
+  color: #BEB9B5;
 }
 
 /* Exp section */
@@ -142,14 +142,15 @@ img {
 .exp-section{
   text-align: center;
   padding: 10rem 2rem;
-  background: linear-gradient(0deg, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%); 
-  
+  background-color: #74828F;
+  /*background: linear-gradient(0deg, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%); 
+  */
 }
 
 .exp-section-header{
   max-width: 640px;
   margin: 0 auto 6rem auto;
-  border-bottom: 0.2rem solid #f0f0f0;
+  border-bottom: 0.2rem solid #FEF6EB; /*orane white */
 }
 
 /* Progess bar */
@@ -165,10 +166,13 @@ img {
     position: relative;
     width: 70%;
     height: 30px;
-    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 100%);
+    background: #C25B56; /* fuzzy wuzzy brown */
+    /*background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 100%);
+    */
     border-radius: 4px;
     margin: 10px auto;
-    font-size: 30px;
+    font-size: 25px; /*percentage */
+    
     
 }
 .container:after { 
@@ -183,7 +187,7 @@ img {
     border-radius: 4px;
     line-height: 30px;
     text-align: left;
-    font-size: 30px; 
+    font-size: 25px; /* languages */
 }
 .fillmult span {
     padding-left: 10px;
@@ -195,13 +199,13 @@ img {
 .projects-section {
   text-align: center;
   padding: 10rem 2rem;
-  background: #45567d;
+  background: #96C0CE;
 }
 
 .projects-section-header {
   max-width: 640px;
   margin: 0 auto 6rem auto;
-  border-bottom: 0.2rem solid #f0f0f0;
+  border-bottom: 0.2rem solid #FEF6EB;
 }
 
 @media (max-width: 28.75em) {
@@ -243,7 +247,7 @@ img {
 }
 
 .project:hover .code {
-  color: #ff7f50;
+  color: #C25B56;
 }
 
 .project-image {
@@ -270,7 +274,7 @@ img {
 }
 
 .btn-show-all:hover {
-  background: #be3144;
+  background: #C25B56;
 }
 
 .btn-show-all:hover > i {
@@ -294,7 +298,7 @@ img {
   width: 100%;
   height: 80vh;
   padding: 0 2rem;
-  background: #303841;
+  background: #525564;
 }
 
 .contact-section-header > h2 {
@@ -337,8 +341,8 @@ footer {
   display: flex;
   justify-content: space-evenly;
   padding: 2rem;
-  background: #303841;
-  border-top: 4px solid #be3144;
+  background: #525564;
+  border-top: 4px solid #C25B56;
 }
 
 footer > p {
